--- a/Stylus.css
+++ b/Stylus.css
@@ -1,3 +1,3 @@
-* {
-    font-family: 'IBM Plex Serif, Linux Libertine, DejaVu Serif, serif' !important;
+p {
+    font-family: 'IBM Plex Serif, Linux Libertine, DejaVu Serif, serif';
 }
