--- a/Stylus.css
+++ b/Stylus.css
@@ -1,3 +1,6 @@
 p {
-    font-family: 'IBM Plex Serif, Linux Libertine, DejaVu Serif, serif';
+    font-family: 'IBM Plex Serif';
+}
+pre {
+    font-family: 'IBM Plex Mono';
 }
