--- a/Stylus/Stylus.css
+++ b/Stylus/Stylus.css
@@ -21,47 +21,46 @@
   }
 }
 @-moz-document domain("news.ycombinator.com") {
-  html {
-    background-color: black;
-  }
-  code {
-    font-family: 'IBM Plex Mono';
-    color: green;
-  }
-  table {
-    background-color: #1d0826;
-    color: #ffa500;
-  }
-  textarea {
-    color: #f24b99;
-    background-color: black;
-  }
-  input {
-    background-color: purple;
-    color: white;
-  }
-  .hnmore a:link,
-  a:visited {
-    color: #f24b99;
-  }
-  .pagetop a,
-  .pagetop a:visited,
-  .title a,
-  .comhead a:link {
-    color: #f24b99;
-    font-size: 1.3em;
-  }
-  .commtext {
-    font-family: 'IBM Plex Serif';
-    color: #f29d35;
-    font-size: 1.3em;
-  }
-  .commtext a:link {
-    color: purple;
-  }
-  .score {
-    color: #f29d35;
-  }
+    html {
+        background-color: black;
+    }
+    code {
+        font-family: "IBM Plex Mono";
+        color: green;
+    }
+    table {
+        background-color: #1d0826;
+        color: #FFA500;
+    }
+    textarea {
+        color: #f24b99;
+        background-color: black;
+    }
+    input {
+        background-color: purple;
+        color: white;
+    }
+    a:link,
+    .hnmore a:link,
+    .commtext a:link,
+    a:visited {
+        color: #f24b99;
+    }
+    .pagetop a,
+    .pagetop a:visited,
+    .title a,
+    .comhead a:link {
+        color: #f24b99;
+        font-size: 1.3em;
+    }
+    .commtext {
+        font-family: "IBM Plex Serif";
+        color: #f29d35;
+        font-size: 1.3em;
+    }
+    .score {
+        color: #f29d35;
+    }
 }
 @-moz-document domain("politico.com") {
   html,
